--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "angular-moment": "^1.3.0",
     "bootstrap": "^5.1.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
